# drogon_template

./: .gitignore  CMakeLists.txt  README.md  config.json  main.cc
cmake/: env_check.cmake  grib_api_check.cmake  silly_utils.cmake
controllers/: check_ctrl.cc
core/: CMakeLists.txt  generic_config.h  tp_config.cpp  tp_config.h
test/: CMakeLists.txt
web/: CMakeLists.txt  main.cc
web/controllers/: check_ctrl.cc  check_ctrl.h
